[package]
name = "link-archive-server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
actix-cors = "0.6.4"
actix-web-httpauth = "0.8.1"
tokio = { version = "1.33.0", features = ["full"] }
serde = { version = "1.0.189", features = ["derive"] }
serde_json = "1.0.107"
reqwest = { version = "0.11.22", features = ["json"] }
scraper = "0.17.1"
argon2 = "0.5.2"
jsonwebtoken = "9.1.1"
uuid = { version = "1.4.1", features = ["v4", "serde"] }
env_logger = "0.10.0"
log = "0.4.20"
dotenv = "0.15.0"
thiserror = "1.0.49"
sqlx = { version = "0.7.2", features = ["runtime-tokio", "tls-native-tls", "postgres", "uuid", "time", "json"] }
time = { version = "0.3.29", features = ["serde"] }
validator = { version = "0.16.1", features = ["derive"] }
base64 = "0.21.4"
url = "2.4.1"
chrono = "0.4.31"
rand_core = "0.6.4"
utoipa = "5.3.1"
utoipa-swagger-ui = "9.0.0"
